Update with java options.